Bug 416954 - Desktop-file-based Trash icon on the desktop shows "Move to trash" in context menu
Summary: Desktop-file-based Trash icon on the desktop shows "Move to trash" in context...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords: usability
: 408115 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-01-30 16:10 UTC by johnathan
Modified: 2025-01-29 19:24 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
screenshot (117.02 KB, image/png)
2020-01-30 16:10 UTC, johnathan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description johnathan 2020-01-30 16:10:58 UTC
Created attachment 125546 [details]
screenshot

SUMMARY
wastebin icon should not get deleted or allow user to delete that icon because it throws a fit everytime one deletes the wastebin icon

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2020-01-31 19:09:23 UTC
This is actually intentional; otherwise there would be no visible way to remove the trash from the desktop!

However maybe we should add a special case for this to change the text to "Remove Trash" because the idea of trashing the trash is pretty bizarre to most users.
Comment 2 Nate Graham 2023-04-09 22:32:16 UTC
*** Bug 408115 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2025-01-28 23:24:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2764
Comment 4 Nate Graham 2025-01-29 19:24:38 UTC
Git commit 3fd6ad2465df773caf9aa073efb23ed50c086401 by Nate Graham.
Committed on 29/01/2025 at 19:24.
Pushed by ngraham into branch 'master'.

Desktop: Make context menu for trash link and contents more contextual

There's already some special handling for the context menu of the trash
link, but it's currently not contextual enough: the menu shows many
items that are either not relevant to the trash, or expose the
implementation detail that the item is actually a .desktop file.

The same is true for items *in* the trash.

Expand on this to clean up their menus even more.
FIXED-IN: 6.4.0

M  +64   -29   containments/desktop/plugins/folder/foldermodel.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/3fd6ad2465df773caf9aa073efb23ed50c086401